[gd_scene load_steps=15 format=2]

[ext_resource path="res://main.gd" type="Script" id=1]
[ext_resource path="res://Creature.tscn" type="PackedScene" id=2]
[ext_resource path="res://MutationFiole.tscn" type="PackedScene" id=3]
[ext_resource path="res://start.tscn" type="PackedScene" id=4]
[ext_resource path="res://assets/labeau tapis.png" type="Texture" id=5]
[ext_resource path="res://assets/labo platforme.png" type="Texture" id=6]
[ext_resource path="res://assets/labo fond .png" type="Texture" id=7]
[ext_resource path="res://audio/lion.wav" type="AudioStream" id=8]
[ext_resource path="res://audio/poisson.wav" type="AudioStream" id=9]
[ext_resource path="res://audio/paon.wav" type="AudioStream" id=10]
[ext_resource path="res://audio/lezard.wav" type="AudioStream" id=11]
[ext_resource path="res://audio/FOULECHOKE0_0.mp3" type="AudioStream" id=12]
[ext_resource path="res://Round.tscn" type="PackedScene" id=13]
[ext_resource path="res://audio/revealvictoire.wav" type="AudioStream" id=14]

[node name="main" type="Node2D"]
script = ExtResource( 1 )

[node name="LaboFloor" type="Sprite" parent="."]
position = Vector2( 514, 446 )
scale = Vector2( 0.6, 0.2 )
z_index = -5

[node name="LaboFond" type="Sprite" parent="."]
position = Vector2( 510, 290 )
scale = Vector2( 0.9, 0.9 )
z_index = -5
texture = ExtResource( 7 )

[node name="LabeauTapis" type="Sprite" parent="."]
position = Vector2( 513, 386 )
scale = Vector2( 0.55, 0.55 )
z_index = -5
texture = ExtResource( 5 )

[node name="LaboPlatforme" type="Sprite" parent="."]
position = Vector2( 143, 277 )
scale = Vector2( 0.5, 0.5 )
z_index = -5
texture = ExtResource( 6 )

[node name="Creature1" parent="." instance=ExtResource( 2 )]
position = Vector2( 216, 162 )

[node name="Creature2" parent="." instance=ExtResource( 2 )]
position = Vector2( 794, 165 )

[node name="Creature3" parent="." instance=ExtResource( 2 )]
position = Vector2( 887, 458 )

[node name="Creature4" parent="." instance=ExtResource( 2 )]
position = Vector2( 163, 449 )

[node name="Fiole1" parent="." instance=ExtResource( 3 )]
position = Vector2( 409, 598 )

[node name="Fiole2" parent="." instance=ExtResource( 3 )]
position = Vector2( 522, 598 )

[node name="Fiole3" parent="." instance=ExtResource( 3 )]
position = Vector2( 640, 597 )

[node name="Model" parent="." instance=ExtResource( 2 )]
position = Vector2( 519, 323 )
z_index = -1

[node name="UILayer" type="CanvasLayer" parent="."]

[node name="start" parent="UILayer" instance=ExtResource( 4 )]

[node name="crianim" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 8 )

[node name="crianimpaon" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 10 )

[node name="crianimpoisson" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 9 )
volume_db = 7.866

[node name="crianimlezard" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 11 )

[node name="CHOKEE" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 12 )

[node name="Round" parent="." instance=ExtResource( 13 )]

[node name="Tween" type="Tween" parent="."]

[node name="reveal" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 14 )
volume_db = -25.707
